# mahiLLM-openai-style

./: .env.example  .gitignore  README.md  docs.html  index.html  package.json  server.js
assistant/: Cargo.toml  README.md  build.rs
assistant/core/: Cargo.toml  build.rs
assistant/core/src/: main.rs
assistant/examples/: client.rs
assistant/proto/: assistant.proto
assistant/src/: main.rs
blog/: index.html  ondevice-ai.html
desktop/: README.md  main.js  package.json  preload.js
ondevice-ai/: .gitignore  README.md
ondevice-ai/cli/: Cargo.toml  build.rs
ondevice-ai/cli/src/: main.rs
ondevice-ai/core/: Cargo.toml  build.rs
ondevice-ai/core/src/: main.rs
ondevice-ai/proto/: assistant.proto
ondevice-ai/python_assistant/: README.md  __init__.py  __main__.py  pyproject.toml
ondevice-ai/python_assistant/core/: __init__.py  config.py  orchestrator.py  schemas.py  server.py
ondevice-ai/python_assistant/ml/: inference.py
ondevice-ai/python_assistant/plugins/: __init__.py  loader.py
ondevice-ai/python_assistant/plugins/installed/: summarize_text.json  summarize_text.py
ondevice-ai/python_assistant/storage/: __init__.py  encryption.py  ingestion.py  vector_store.py
ondevice-ai/python_assistant/tools/: mlx_runtime.py
ondevice-ai/python_assistant/ui/: __init__.py  cli.py  desktop.py
public/: 404.html  app.js  index.html  robots.txt  sitemap.xml  styles.css
public/ondevice-ai/: index.html
var/: pki.sqlite
views/: blog.ejs  docs.ejs
