[package]
name = "ondevice-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.9"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
tonic-reflection = "0.9"

[build-dependencies]
tonic-build = "0.9"
protoc-bin-vendored = "3"
